--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/FergusKing/netlify-poc#readme",
   "dependencies": {
     "contentful-metalsmith": "^0.11.0",
-    "dot-env": "0.0.1",
+    "dotenv": "^5.0.1",
     "metalsmith": "^2.3.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-data-markdown": "0.0.3",
+    "metalsmith-layouts": "^2.1.0",
     "metalsmith-markdown": "^0.2.2",
-    "metalsmith-templates": "^0.7.0"
+    "metalsmith-templates": "^0.7.0",
+    "pug": "^2.0.3"
   }
 }
