--- a/package.json
+++ b/package.json
@@ -18,14 +18,24 @@
   },
   "homepage": "https://github.com/FergusKing/netlify-poc#readme",
   "dependencies": {
-    "contentful-metalsmith": "^0.11.0",
+    "bootstrap-sass": "^3.3.7",
+    "contentful-metalsmith": "^0.9.0",
     "dotenv": "^5.0.1",
-    "metalsmith": "^2.3.0",
+    "gazer": "^0.0.3",
+    "glob": "^7.0.6",
+    "handlebars": "^4.0.0",
+    "metalsmith": "^2.1.0",
     "metalsmith-assets": "^0.1.0",
+    "metalsmith-clean": "^0.0.0",
     "metalsmith-data-markdown": "0.0.3",
-    "metalsmith-layouts": "^2.1.0",
-    "metalsmith-markdown": "^0.2.2",
-    "metalsmith-templates": "^0.7.0",
-    "pug": "^2.0.3"
+    "metalsmith-drafts": "^0.0.1",
+    "metalsmith-layouts": "^1.6.5",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-sass": "^1.3.0"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^1.2.0",
+    "live-server": "^1.1.0",
+    "npm-run-all": "^3.0.0"
   }
 }
