--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-build/
 
 # TypeScript v1 declaration files
 typings/
@@ -61,3 +60,4 @@ typings/
 # next.js build output
 .next
 .env.json
+/build/
